# Stem-Separator-API

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt  start.sh  vercel.json
app/: __init__.py  config.py  constants.py  exceptions.py  main.py  models.py  profiling.py  tensorflow_compat.py  utils.py
app/routes/: __init__.py  health.py  separate.py
app/services/: __init__.py  audio_service.py
