[project]
name = "stem-separator-api"
version = "1.0.0"
description = "Production-ready FastAPI application for audio stem separation using Spleeter"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["app"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
    "SIM",    # simplify
    "PTH",    # pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in defaults (FastAPI File/Query pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
