[project]
name = "stem-separator-api"
version = "1.0.0"
description = "Production-ready FastAPI application for audio stem separation using Spleeter"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
# Railway/Dockerfile use Python 3.8; use py38 so type hints stay 3.8-compatible
target-version = "py38"
line-length = 88
src = ["app"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
    "SIM",    # simplify
    "PTH",    # pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in defaults (FastAPI File/Query pattern)
    "UP006",  # use set/list/dict (PEP 585) - we use typing.* for Python 3.8 (Railway)
    "UP035",  # deprecated typing.Set/List/Dict - required on 3.8
    "UP045",  # use X | None (PEP 604) - Optional[] required on 3.8
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
